kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: client
    spec:
      containers:
      - image: gphalippou/weflat:frontend_production_latest
        imagePullPolicy: Always
        name: client
        ports:
        - containerPort: 4000
        resources: {}
        volumeMounts:
        - mountPath: /app/dist/browser
          name: vfrontend
        - mountPath: /app/log
          name: client-logs
      - image: gphalippou/weflat:http_production_latest
        imagePullPolicy: Always
        name: http
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: vfrontend
      hostname: apache
      restartPolicy: Always
      serviceAccountName: ""
      hostname: client
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: vfrontend
      - name: client-logs
        persistentVolumeClaim:
          claimName: client-logs
status: {}
