kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: PGDATA
          value: /var/lib/postgresql/data
        - name: PGPASSWORD
          value: weflat123$
        - name: PGPORT
          value: "5432"
        - name: PGUSER
          value: weflat
        image: gphalippou/weflat-database:dev_latest
        imagePullPolicy: Always
        name: database
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: database-data
          subPath: postgres
      hostname: database
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-data
status: {}
