kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database-svc
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
