kubernetes/rest-smtp-sink-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    weflat-service: rest-smtp-sink
  name: rest-smtp-sink-svc
spec:
  ports:
  - port: 25
    name: smtp
    protocol: TCP
  - port: 80
    name: http
    protocol: TCP
  selector:
    weflat-service: rest-smtp-sink
status:
  loadBalancer: {}
