kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
